--- a/Porsche/package.json
+++ b/Porsche/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "json-server": "json-server --watch db.json",
     "test": "ng test"
   },
   "private": true,
@@ -23,6 +24,7 @@
     "@angular/router": "~13.2.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
